# epaper-cmake

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  EPD_7in5bc_test.c  EPD_Test.h  ImageData.h  example.c
examples/: EPD_7in5bc_V2_test.c  main.c
include/: DEV_Config.h  GUI_Paint.h
src/: CMakeLists.txt
