PROJECT(epaper)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(M_VERSION_MAJOR 1)
SET(M_VERSION_MINOR 0)
SET(M_VERSION_PATCH 0)
SET(M_VERSION ${M_VERSION_MAJOR}.${M_VERSION_MINOR}.${M_VERSION_PATCH})

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(EXAMPLE_BINARY ${PROJECT_NAME}_example)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

SET(EXAMPLE_BINARY ${PROJECT_NAME}_example)

set(CCXX_FLAGS "-O2 -Wall -std=c++11 -fPIC ")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CCXX_FLAGS}")

MESSAGE(STATUS "start build")
MESSAGE(STATUS "CMAKE_CXX_FLAGS: " ${CMAKE_CXX_FLAGS})

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(example)

